--- a/files/en-us/mdn/about/index.html
+++ b/files/en-us/mdn/about/index.html
@@ -36,7 +36,7 @@ tags:
 
 <h4 id="Documentation_and_articles">Documentation and articles</h4>
 
-<p><strong>MDN content</strong> has been prepared with the contributions of authors from both inside and outside Mozilla. Unless otherwise indicated, the content is available under the terms of the <a class="external text" href="https://creativecommons.org/licenses/by-sa/2.5/" rel="nofollow">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA), v2.5 or any later version.</p>
+<p><strong>MDN content</strong> has been prepared with the contributions of authors from both inside and outside Mozilla. Unless otherwise indicated, the content is available under the terms of the <a href="https://creativecommons.org/licenses/by-sa/2.5/" rel="nofollow">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA), v2.5 or any later version.</p>
 
 <p>When reusing MDN content, you need to ensure two things:</p>
 
@@ -69,10 +69,10 @@ tags:
 
 <p>If you wish to contribute to this wiki, you must make your documentation available under the Attribution-ShareAlike license (or occasionally an alternative license already specified by the page you are editing), and your code samples available under <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons CC-0</a> (a Public Domain dedication). Adding to this wiki means you agree that your contributions will be made available under those licenses.</p>
 
-<p>Some older content was made available under a license other than those described above; these are indicated at the bottom of each page by way of an <a class="internal" href="/Archive/Meta_docs/Examples/Alternate_License_Block">Alternate License Block</a>.</p>
+<p>Some older content was made available under a license other than those described above; these are indicated at the bottom of each page by way of an <a href="/Archive/Meta_docs/Examples/Alternate_License_Block">Alternate License Block</a>.</p>
 
 <div class="warning">
-<p>No new pages may be created using alternate licenses.</p>
+<p><strong>Warning:</strong> No new pages may be created using alternate licenses.</p>
 </div>
 
 <p><strong>Copyright for contributed materials remains with the author unless the author assigns it to someone else</strong>.</p>
