--- a/files/en-us/mdn/contribute/github_beginners/index.html
+++ b/files/en-us/mdn/contribute/github_beginners/index.html
@@ -183,10 +183,8 @@ Make sure you run the following to switch to the main branch before doing anythi
 
 <pre class="brush: bash">git switch main</pre>
 
-<div class="notecard note">
-  <h4>Note</h4>
-
-  <p>In other tutorials you may have seen <code>git checkout</code> used to change branches in a repo. That works fine most of the time, but can sometimes have unintended side-effects, therefore in this tutorial we are recommending the newer <code>git switch</code> command, which is designed purely for switching branches and has less chance of going wrong. If you are interested in how these commands are related, and the differences between them, <a href="https://github.blog/2019-08-16-highlights-from-git-2-23/#experimental-alternatives-for-git-checkout">Highlights from Git 2.23 > Experimental alternatives for git checkout</a> provides a good summary.</p>
+<div class="note">
+  <p><strong>Note:</strong> In other tutorials you may have seen <code>git checkout</code> used to change branches in a repo. That works fine most of the time, but can sometimes have unintended side-effects, therefore in this tutorial we are recommending the newer <code>git switch</code> command, which is designed purely for switching branches and has less chance of going wrong. If you are interested in how these commands are related, and the differences between them, <a href="https://github.blog/2019-08-16-highlights-from-git-2-23/#experimental-alternatives-for-git-checkout">Highlights from Git 2.23 > Experimental alternatives for git checkout</a> provides a good summary.</p>
 </div>
 
 <h3 id="update_your_main_branch">Update your main branch</h3>
@@ -314,10 +312,8 @@ nothing to commit, working tree clean</pre>
 
     <pre class="brush: bash">git add README.md</pre>
 
-    <div class="notecard note">
-      <h3>Note</h3>
-
-      <p><code>README.md</code> is the path to the file you have changed, not just its name. If it were inside a subdirectory, you'd have to write the full path to the file.
+    <div class="note">
+      <p><strong>Note:</strong> <code>README.md</code> is the path to the file you have changed, not just its name. If it were inside a subdirectory, you'd have to write the full path to the file.
     </div>
   </li>
   <li>
@@ -381,10 +377,8 @@ To github.com:chrisdavidmills/content.git
 
     <p><img src="open-pull-request.png" alt="open pull request form, which includes text fields for title and description"></p>
 
-    <div class="notecard warning">
-      <h3>Warning</h3>
-
-      <p>Only follow the rest of these steps if you have a real change to make to the repo! Please do not actually submit test PRs to our repos.</p>
+    <div class="warning">
+      <p><strong>Warning:</strong> Only follow the rest of these steps if you have a real change to make to the repo! Please do not actually submit test PRs to our repos.</p>
     </div>
   </li>
   <li>
@@ -450,9 +444,8 @@ To github.com:chrisdavidmills/content.git
 
 <p>If you look at your remote fork's github.com page again, you'll see the commit that you wanted to reverse, plus the commit that reverses it.</p>
 
-<div class="note notecard">
-  <h4>Note</h4>
-  <p>Another way to handle getting rid of files that have ended up in pull requests that you don't want to be there is to use the GitHub UI. Go to your pull request's page on github.com, go to the "Files changed" tab, and find the file you want to remove from the pull request. At the top right of the file's box in the page there will be a "three dot" (<code>...</code>) menu. Press this button and choose "Delete file". In the confirmation page, enter a title for the new commit, make sure the "Commit directly..." checkbox is selected, and press the "Commit changes" button.</p>
+<div class="note">
+  <p><strong>Note:</strong> Another way to handle getting rid of files that have ended up in pull requests that you don't want to be there is to use the GitHub UI. Go to your pull request's page on github.com, go to the "Files changed" tab, and find the file you want to remove from the pull request. At the top right of the file's box in the page there will be a "three dot" (<code>...</code>) menu. Press this button and choose "Delete file". In the confirmation page, enter a title for the new commit, make sure the "Commit directly..." checkbox is selected, and press the "Commit changes" button.</p>
 
   <p>It is usually a good idea to get the rest of the pull request looking exactly how you want it before you make changes via the GitHub UI. If you do something like this and then end up having to make more changes, you'll need to remember to pull the changes you made to your remote branch down to your local branch (e.g. with <code>git pull</code>) before you can push more commits.</p>
 </div>
