--- a/files/en-us/mdn/contribute/markdown_in_mdn/index.html
+++ b/files/en-us/mdn/contribute/markdown_in_mdn/index.html
@@ -6,13 +6,11 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<div class="notecard warning">
+<div class="warning">
 
-<h4>Warning</h4>
+  <p><strong>Warning:</strong> We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
 
-<p>We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
-
-<p>At the moment only the JavaScript documentation is in Markdown (pages under <a href="/en-US/docs/Web/JavaScript">https://developer.mozilla.org/en-US/docs/Web/JavaScript</a>), so this page only applies to that part of the site. For other parts of the site, write documentation in HTML.</p>
+  <p>At the moment JavaScript, CSS and Web API documentation are in Markdown, so this page applies to those parts of the site. For other parts of the site, write documentation in HTML.</p>
 
 </div>
 
