--- a/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
@@ -132,9 +132,8 @@ tags:
 
 <p>For general usage, you can use modern well-supported JS features (such as <a href="/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions">arrow functions</a>, <a href="/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise">promises</a>, <code><a href="/en-US/docs/Web/JavaScript/Reference/Statements/async_function">async</a></code>/<code><a href="/en-US/docs/Web/JavaScript/Reference/Operators/await">await</a></code>, <code><a href="/en-US/docs/Web/JavaScript/Reference/Statements/let">let</a></code>/<code><a href="/en-US/docs/Web/JavaScript/Reference/Statements/const">const</a></code>, <a href="/en-US/docs/Web/JavaScript/Reference/Template_literals">template literals</a>, and <a href="/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax">spread syntax</a>) in MDN examples. We include them in many places in these guidelines, as we believe the web industry has generally gotten to the point where such features are familiar enough to be understandable. And for those that don't use them yet, we'd like to play our part in helping people to evolve their skills.</p>
 
-<div class="notecard note">
-  <h4>Note</h4>
-  <p>By "general usage", we mean general example writing. Reference pages covering specific JS features obviously need to use the features they are documenting!</p>
+<div class="note">
+  <p><strong>Note:</strong> By "general usage", we mean general example writing. Reference pages covering specific JS features obviously need to use the features they are documenting!</p>
 </div>
 
 <h2 id="Variables">Variables</h2>
@@ -157,8 +156,7 @@ let s = d/t;
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The only place where it is OK to not use human-readable semantic names is where a very common recognized convention exists, such as using <code>i</code>, <code>j</code>, etc. for loop iterators.</p>
+  <p><strong>Note:</strong> The only place where it is OK to not use human-readable semantic names is where a very common recognized convention exists, such as using <code>i</code>, <code>j</code>, etc. for loop iterators.</p>
 </div>
 
 <h3 id="Declaring_variables">Declaring variables</h3>
