--- a/files/en-us/mdn/structures/banners_and_notices/index.html
+++ b/files/en-us/mdn/structures/banners_and_notices/index.html
@@ -16,7 +16,7 @@ tags:
 
 <p>To do this, you insert the macro call at the top of the article, and add the new tag to the list. Once you've done that, raise a pull request and get your changes reviewed and merged. From then on, an appropriate banner will appear on the page, and any macros that reference page tags when looking for up-to-date articles will know that the page you've updated is deprecated, or whatever.</p>
 
-<div class="note notecard">
+<div class="note">
   <p><strong>Note</strong>: To learn more about editing, see our <a href="https://github.com/mdn/content">content repo README</a>.</p>
 </div>
 
