--- a/files/en-us/mdn/structures/code_examples/index.html
+++ b/files/en-us/mdn/structures/code_examples/index.html
@@ -63,7 +63,7 @@ console.log(test);</pre>
 
 <p>Optionally, you might want to show a static image of the code's resulting output. For example:</p>
 
-<p><img alt="" src="console-example.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="console-example.png"></p>
 
 <h2 id="Traditional_live_samples">Traditional live samples</h2>
 
