--- a/files/en-us/mdn/contribute/fixing_mdn_content_bugs/index.html
+++ b/files/en-us/mdn/contribute/fixing_mdn_content_bugs/index.html
@@ -10,9 +10,8 @@ tags:
 
 <p>Problems with MDN docs are reported as <a href="https://github.com/mdn/content/issues">content repo issues</a> (and there are still some open issues in the legacy <a href="https://github.com/mdn/sprints/issues">sprints repo</a>). This article helps you find the <em>best</em> issues to work on, based on your expertise and how much time you have available, and outlines the main steps to fixing them.</p>
 
-<div class="notecard note">
-  <h2>Note</h2>
-  <p>We get a lot of content bugs — any help you can give in fixing them is very much appreciated!</p>
+<div class="note">
+  <p><strong>Note:</strong> We get a lot of content bugs — any help you can give in fixing them is very much appreciated!</p>
 </div>
 
 
@@ -138,6 +137,6 @@ tags:
  <li>Once the issue is verified fixed, it can be closed. The person closing the issue can be either the original issue submitter, or an MDN staff member.</li>
 </ol>
 
-<div class="notecard note">
-<p><strong>Note</strong>: When choosing and working on an issue, you might also find our <a href="/en-US/docs/MDN/Contribute/GitHub_best_practices">GitHub best practices</a> and <a href="/en-US/docs/MDN/Contribute/Getting_started">Getting started on MDN</a> guides useful.</p>
+<div class="note">
+  <p><strong>Note:</strong> When choosing and working on an issue, you might also find our <a href="/en-US/docs/MDN/Contribute/GitHub_best_practices">GitHub best practices</a> and <a href="/en-US/docs/MDN/Contribute/Getting_started">Getting started on MDN</a> guides useful.</p>
 </div>
