--- a/files/en-us/mdn/contribute/help_beginners/index.html
+++ b/files/en-us/mdn/contribute/help_beginners/index.html
@@ -82,8 +82,8 @@ tags:
  </li>
 </ol>
 
-<div class="notecard warning">
-<p>Important: Above all, be patient, be friendly, be kind. Remember — most of these folks are beginners.</p>
+<div class="note">
+<p><strong>Note:</strong> Important: Above all, be patient, be friendly, be kind. Remember — most of these folks are beginners.</p>
 </div>
 
 <h2 id="Structure_of_the_MDN_Learning_Area">Structure of the MDN Learning Area</h2>
