--- a/files/en-us/mdn/contribute/howto/document_a_css_property/index.html
+++ b/files/en-us/mdn/contribute/howto/document_a_css_property/index.html
@@ -18,13 +18,10 @@ tags:
 <p>First, you will need to decide which property to document. You might have noticed that a page is missing, or you might have seen missing content reported in our <a href="https://github.com/mdn/content/issues">issues list</a>. For details about the CSS property you will need to find a relevant specification for it (e.g., a <a href="https://www.w3.org/Style/CSS/">W3C specification</a>, or a bug report for a non-standard property used in rendering engines like Gecko or Blink).</p>
 
 <div class="note">
-<p><strong>Pro tips:</strong></p>
-
-<ul>
- <li>When using a W3C spec, always use the <strong>Editor's Draft</strong> (note the red banner on the left side) and not a published version (e.g. Working Draft). The Editor's Draft is always closer to the final version!</li>
- <li>If the implementation and spec diverge, feel free to mention it in the implementation bug: it may be a bug in the implementation (and a follow-up bug will be filed), a delay in the publication of a new spec, or an error in the spec (in which case a spec bug is worth filing).</li>
-</ul>
+  <p><strong>Note:</strong> When using a W3C spec, always use the <strong>Editor's Draft</strong> (note the red banner on the left side) and not a published version (e.g. Working Draft). The Editor's Draft is always closer to the final version!</p>
 </div>
+
+<p>If the implementation and spec diverge, feel free to mention it in the implementation bug: it may be a bug in the implementation (and a follow-up bug will be filed), a delay in the publication of a new spec, or an error in the spec (in which case a spec bug is worth filing).</p>
 
 <h2 id="Step_2_—_Check_the_database_of_CSS_properties">Step 2 — Check the database of CSS properties</h2>
 
