--- a/files/en-us/mdn/contribute/processes/workstream_assessment_project/index.html
+++ b/files/en-us/mdn/contribute/processes/workstream_assessment_project/index.html
@@ -48,9 +48,8 @@ tags:
   <li>Projects that are added to the roadmap are moved onto the project setup stage. At this stage, each one needs a project lead assigned that will make sure the work happens.</li>
 </ol>
 
-<div class="note notecard">
-  <h3>Note</h3>
-  <p>If there is any disagreement about any of the given scores or decisions during the opportunity assessment meetings, the chair of the meeting will listen to opposing views for a maximum of one minute per view, then make a final decision on the matter. The chair's decision is final.</p>
+<div class="note">
+  <p><strong>Note:</strong> If there is any disagreement about any of the given scores or decisions during the opportunity assessment meetings, the chair of the meeting will listen to opposing views for a maximum of one minute per view, then make a final decision on the matter. The chair's decision is final.</p>
 </div>
 
 <h2 id="mdn_project_setup">MDN project setup</h2>
