--- a/files/en-us/mdn/structures/page_types/glossary_page_template/index.html
+++ b/files/en-us/mdn/structures/page_types/glossary_page_template/index.html
@@ -6,8 +6,7 @@ tags:
   - Template
   - reference page
 ---
-<div>{{MDNSidebar}}</div><div class="note">
-<h2 id="Remove_before_publishing">Remove before publishing</h2>
+<div>{{MDNSidebar}}</div>
 
 <h3 id="Title_and_slug">Title and slug</h3>
 
@@ -16,7 +15,7 @@ tags:
 <h3 id="Tags">Tags</h3>
 
 <p>In a glossary page, you need to include the following tags (see the <em>Tags</em> section at the bottom of the editor UI): <strong>Glossary</strong>, and <strong>TermBeingDefined</strong>. You can also include further descriptive tags as appropriate. </p>
-</div>
+
 
 <p>The TermBeingDefined is ... (include concise definition of the term being defined).</p>
 
