--- a/files/en-us/mdn/contribute/howto/update_the_css_json_db/index.html
+++ b/files/en-us/mdn/contribute/howto/update_the_css_json_db/index.html
@@ -6,9 +6,11 @@ tags:
   - Howto
   - MDN Meta
 ---
-<div>{{MDNSidebar}}</div><p id="Prerequisite_resources">Several characteristics of a CSS property, like its syntax or if it can be animated, are mentioned in multiple pages on MDN and are therefore stored in an ad-hoc "database". This database actually consists of several JSON files containing CSS related information, which are <a href="https://github.com/mdn/data/tree/master/css">stored on GitHub</a>. This article describes how to update this structure.</p>
+<div>{{MDNSidebar}}</div>
 
-<h2 id="Prerequisite_resources_2">Prerequisite resources</h2>
+<p>Several characteristics of a CSS property, like its syntax or if it can be animated, are mentioned in multiple pages on MDN and are therefore stored in an ad-hoc "database". This database actually consists of several JSON files containing CSS related information, which are <a href="https://github.com/mdn/data/tree/master/css">stored on GitHub</a>. This article describes how to update this structure.</p>
+
+<h2 id="Prerequisite_resources">Prerequisite resources</h2>
 
 <p>To update or check the content of the CSS JSON DB, you will need to gather information from different sources.</p>
 
