--- a/files/en-us/mdn/contribute/index.html
+++ b/files/en-us/mdn/contribute/index.html
@@ -10,9 +10,8 @@ tags:
 
 <p>MDN Web Docs needs your help! We have a large number of typos to fix, examples to write, bugs to fix, people to talk to, and more, and the number is growing as more people start using the site. This page outlines what you can do to help.</p>
 
-<div class="notecard note">
-  <h4>Note</h4>
-  <p>If you haven't contributed to MDN previously, the <a href="/en-US/docs/MDN/Contribute/Getting_started">Getting Started</a> guide explains the process in four simple steps. Good news, you're already on step 3: "Finding out how you can help"!</p>
+<div class="note">
+  <p><strong>Note:</strong> If you haven't contributed to MDN previously, the <a href="/en-US/docs/MDN/Contribute/Getting_started">Getting Started</a> guide explains the process in four simple steps. Good news, you're already on step 3: "Finding out how you can help"!</p>
 </div>
 
 <h2 id="What_can_I_do_to_help">What can I do to help?</h2>
@@ -81,7 +80,7 @@ tags:
 
 <p>If our main priorities listed above don't interest you, you can find a number of other, more general task types to get involved with below, split up by skillset.</p>
 
-<p id="Option_1_I_like_words">If you are more interested in words, you could do the following:</p>
+<p>If you are more interested in words, you could do the following:</p>
 
 <ul>
  <li><a href="/en-US/docs/MDN/Contribute/Howto/Create_and_edit_pages#editing_an_existing_page">Update an existing article with new information</a> (5 minutes-1 hour)</li>
@@ -104,8 +103,8 @@ tags:
  <li><a href="/en-US/docs/MDN/Structures/Compatibility_tables">Add or update browser compatibility data on a reference page</a> (30 minutes to 1 hour)</li>
 </ul>
 
-<div class="notecard note">
-<p><strong>Note</strong>: If you have found something that is incorrect on MDN but you're not sure how to fix it, you can report problems by <a href="https://github.com/mdn/content/issues/new/choose">filing a documentation issue</a>. Please give the issue a descriptive title. (It's not helpful to say "Dead link" without saying where you found the link).</p>
+<div class="note">
+<p><strong>Note:</strong> If you have found something that is incorrect on MDN but you're not sure how to fix it, you can report problems by <a href="https://github.com/mdn/content/issues/new/choose">filing a documentation issue</a>. Please give the issue a descriptive title. (It's not helpful to say "Dead link" without saying where you found the link).</p>
 </div>
 
 <h2 id="Other_useful_pages">Other useful pages</h2>
