--- a/files/en-us/mdn/contribute/localize/index.html
+++ b/files/en-us/mdn/contribute/localize/index.html
@@ -14,7 +14,7 @@ tags:
 
 <h2 id="Active_locales">Active locales</h2>
 
-<div class="notecard note">
+<div class="note">
 <p><strong>Note</strong>: If you want to contribute to one of the existing active locales get in touch with one of the active members listed below, or <a href="/en-US/docs/MDN/Contribute/Getting_started#step_4_ask_for_help">contact us for help</a>.</p>
 </div>
 
@@ -60,7 +60,7 @@ tags:
  <li>Current contributors: <a href="https://github.com/armanpwnz">armanpwnz</a>, <a href="https://github.com/captainspring">captainspring</a>, <a href="https://github.com/mpstv">mpstv</a>, <a href="https://github.com/myshov">myshov</a>, <a href="https://github.com/Saionaro">Saionaro</a>, <a href="https://github.com/sashasushko">sashasushko</a>, <a href="https://github.com/lex111">lex111</a></li>
 </ul>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> If you want to discuss unfreezing a currently frozen locale, the <a href="https://github.com/mdn/translated-content/blob/main/PEERS_GUIDELINES.md#activating-a-locale">guidelines on what is required can be found here</a>.</p>
 </div>
 
