--- a/files/en-us/mdn/contribute/processes/short_surveys/index.html
+++ b/files/en-us/mdn/contribute/processes/short_surveys/index.html
@@ -56,9 +56,8 @@ tags:
       <li>Date (range) when the survey ideally should be run.</li>
       <li>Actions which will be taken based on the results.</li>
       <li>Questions and answer options
-        <div class="note notecard">
-          <h4>Note</h4>
-          <p>Certain types of data will need a legal review, along with intention, e.g. is the data intended to be published, or shared with other organizations? See <a href="#legal_requirements">Legal requirements</a> below for more information.</p>
+        <div class="note">
+          <p><strong>Note:</strong> Certain types of data will need a legal review, along with intention, e.g. is the data intended to be published, or shared with other organizations? See <a href="#legal_requirements">Legal requirements</a> below for more information.</p>
         </div>
       </li>
       <li>Suggested percentage of the MDN to be exposed to the survey, e.g. 3%. The Default percentage is 5%; if you want a higher percentage, a clear justification is needed. For example, if your survey aims to collect data to help inform solutions for a well-documented critical web platform bug that is affecting a large number of developers right now, then that is probably good justification, as long as you can provide some clear evidence. Typical criteria to base this justification on can be found at <a href="https://github.com/openwebdocs/project/blob/main/steering-committee/prioritization-criteria.md">OWD prioritization criteria</a> — these criteria were written to inform prioritization of MDN content, but they are still relevant here.
@@ -102,7 +101,6 @@ tags:
 
 <p>The MDN team at Mozilla owns the survey process, are responsible for publishing the survey, and holds final veto power for which surveys will be run and how. We will make sure that the appropriate legal notices and privacy statements are included on the header page of each survey.</p>
 
-<div class="note notecard">
-  <h4>Note</h4>
-  <p>Initially, the Mozilla legal team will review all surveys, to get a better feel for the project, and to make sure things are going well.</p>
+<div class="note">
+  <p><strong>Note:</strong> Initially, the Mozilla legal team will review all surveys, to get a better feel for the project, and to make sure things are going well.</p>
 </div>
