--- a/files/en-us/mdn/guidelines/code_guidelines/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/index.html
@@ -17,8 +17,8 @@ tags:
 
 <p>If you are looking for guidelines to follow when writing your code examples, you have come to the right place. The biggest advantage to adhering to these guidelines is that it will foster consistency across our samples and demos on MDN, which increases readability and comprehension overall.</p>
 
-<div class="note notecard">
-<p><strong>Note</strong>: If you want advice on the styling of code as it appears on an MDN article, rather than the code content, see our <a href="/en-US/docs/MDN/Guidelines/Writing_style_guide#code_sample_style_and_formatting">Writing style guide</a>.</p>
+<div class="note">
+<p><strong>Note:</strong> If you want advice on the styling of code as it appears on an MDN article, rather than the code content, see our <a href="/en-US/docs/MDN/Guidelines/Writing_style_guide#code_sample_style_and_formatting">Writing style guide</a>.</p>
 </div>
 
 <h2 id="Article_structure">Article structure</h2>
