--- a/files/en-us/mdn/guidelines/css_style_guide/index.html
+++ b/files/en-us/mdn/guidelines/css_style_guide/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <p>{{MDNSidebar}}</p>
 
-<div class="notecard warning">
+<div class="warning">
   <p><strong>Warning:</strong> We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
   <p>At the moment only the JavaScript documentation is in Markdown (pages under <a href="/en-US/docs/Web/JavaScript">https://developer.mozilla.org/en-US/docs/Web/JavaScript</a>). So if you're writing content in that part of the site, this page is <em>not</em> applicable, and you should instead follow the guidelines in the <a href="/en-US/docs/MDN/Contribute/Markdown_in_MDN">Markdown in MDN</a> guide.</p>
 </div>
@@ -178,13 +178,13 @@ function works(){
 
 <p>Turns a section of content into a note box, which is normally a useful note that tangentially relates to the current subject but doesn't directly fit into the flow of information.</p>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> This is how we usually present a note in an MDN article.</p>
 </div>
 
 <h3 id="Example_syntax_12">Example syntax</h3>
 
-<pre class="brush: html">&lt;div class="notecard note"&gt;
+<pre class="brush: html">&lt;div class="note"&gt;
   &lt;p&gt;&lt;strong&gt;Note:&lt;/strong&gt; This is how we usually present a note in an MDN article.&lt;/p&gt;
 &lt;/div&gt;</pre>
 
@@ -192,12 +192,12 @@ function works(){
 
 <p>Turns a section of content into a warning box, which normally communicates a vital fact that the reader needs to be really careful about (e.g., they need to do something, or avoid something to avoid serious issues.)</p>
 
-<div class="notecard warning">
+<div class="warning">
   <p><strong>Warning:</strong> Here be dragons!</p>
 </div>
 
 <h3 id="Example_syntax_17">Example syntax</h3>
 
-<pre class="brush: html">&lt;div class="notecard warning"&gt;
+<pre class="brush: html">&lt;div class="warning"&gt;
   &lt;p&gt;&lt;strong&gt;Warning:&lt;/strong&gt; Here be dragons!&lt;/p&gt;
 &lt;/div&gt;</pre>
