--- a/files/en-us/mdn/guidelines/writing_style_guide/index.html
+++ b/files/en-us/mdn/guidelines/writing_style_guide/index.html
@@ -31,8 +31,8 @@ tags:
 <p>Page titles and section headings should use sentence-style capitalization (only capitalize the first word and proper nouns) rather than headline-style capitalization:</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: "A new method for creating JavaScript rollovers"</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: "A New Method for Creating JavaScript Rollovers"</li>
+ <li><strong>Correct</strong>: "A new method for creating JavaScript rollovers"</li>
+ <li><strong>Incorrect</strong>: "A New Method for Creating JavaScript Rollovers"</li>
 </ul>
 
 <p>We have many older pages that were written before this style rule was established. Feel free to update them as needed if you like. We're gradually getting to them.</p>
@@ -200,7 +200,9 @@ tags:
 
 <p>Use the <strong>"Formatting Styles"</strong> drop-down list to apply predefined styles to selected content.</p>
 
-<div class="note notecard">The <strong>"Note Box"</strong> style is used to call out important notes, like this one.</div>
+<div class="note">
+  <p><strong>Note:</strong> The <strong>"Note Box"</strong> style is used to call out important notes, like this one.</p>
+</div>
 
 <div class="warning">Similarly, the <strong>"Warning Box"</strong> style creates warning boxes like this.</div>
 
@@ -208,8 +210,8 @@ tags:
 
 <h3 id="Code_sample_style_and_formatting">Code sample style and formatting</h3>
 
-<div class="note notecard">
-<p><strong>Note</strong>: This section deals with the styling/formatting of code as it appears on an MDN article. If you want guidelines on actually writing code examples, see our <a href="/en-US/docs/MDN/Guidelines/Code_guidelines">Code sample guidelines</a>.</p>
+<div class="note">
+<p><strong>Note:</strong> This section deals with the styling/formatting of code as it appears on an MDN article. If you want guidelines on actually writing code examples, see our <a href="/en-US/docs/MDN/Guidelines/Code_guidelines">Code sample guidelines</a>.</p>
 </div>
 
 <h4 id="Tabs_and_line_breaks">Tabs and line breaks</h4>
@@ -267,10 +269,10 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <ul>
  <li>Common Latin abbreviations (etc., i.e., e.g.) may be used in parenthetical expressions and notes. Use periods in these abbreviations, followed by a comma or other appropriate punctuation.
   <ul>
-   <li><span class="correct"><strong>Correct</strong></span>: Web browsers (e.g., Firefox) can be used ...</li>
-   <li><span class="incorrect"><strong>Incorrect</strong></span>: Web browsers e.g. Firefox can be used ...</li>
-   <li><span class="incorrect"><strong>Incorrect</strong></span>: Web browsers, e.g. Firefox, can be used ...</li>
-   <li><span class="incorrect"><strong>Incorrect</strong></span>: Web browsers, (eg: Firefox) can be used ...</li>
+   <li><strong>Correct</strong>: Web browsers (e.g., Firefox) can be used ...</li>
+   <li><strong>Incorrect</strong>: Web browsers e.g. Firefox can be used ...</li>
+   <li><strong>Incorrect</strong>: Web browsers, e.g. Firefox, can be used ...</li>
+   <li><strong>Incorrect</strong>: Web browsers, (eg: Firefox) can be used ...</li>
   </ul>
  </li>
 </ul>
@@ -280,10 +282,10 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <ul>
  <li>In regular text (i.e., text outside of notes or parentheses), use the English equivalent of the abbreviation.
   <ul>
-   <li><span class="correct"><strong>Correct</strong></span>: ... web browsers, and so on.</li>
-   <li><span class="incorrect"><strong>Incorrect</strong></span>: ... web browsers, etc.</li>
-   <li><span class="correct"><strong>Correct</strong></span>: Web browsers such as Firefox can be used ...</li>
-   <li><span class="incorrect"><strong>Incorrect</strong></span>: Web browsers e.g. Firefox can be used ...</li>
+   <li><strong>Correct</strong>: ... web browsers, and so on.</li>
+   <li><strong>Incorrect</strong>: ... web browsers, etc.</li>
+   <li><strong>Correct</strong>: Web browsers such as Firefox can be used ...</li>
+   <li><strong>Incorrect</strong>: Web browsers e.g. Firefox can be used ...</li>
   </ul>
  </li>
 </ul>
@@ -337,8 +339,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
  </tbody>
 </table>
 
-<div class="note notecard">
-<p><strong>Note</strong>: Always consider whether it's truly beneficial to use a Latin abbreviation. Some of these are used so rarely that many readers will either confuse or fail to understand their meanings.</p>
+<div class="note">
+<p><strong>Note:</strong> Always consider whether it's truly beneficial to use a Latin abbreviation. Some of these are used so rarely that many readers will either confuse or fail to understand their meanings.</p>
 
 <p>Also, be sure that <em>you</em> use them correctly, if you choose to do so. For example, be careful not to confuse "e.g." with "i.e.", which is a common error.</p>
 </div>
@@ -350,8 +352,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>Use full capitals and delete periods in all acronyms and abbreviations, including organizations such as "US" and "UN".</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: XUL</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: X.U.L.; Xul</li>
+ <li><strong>Correct</strong>: XUL</li>
+ <li><strong>Incorrect</strong>: X.U.L.; Xul</li>
 </ul>
 
 <h4 id="Expansion">Expansion</h4>
@@ -359,8 +361,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>On the first mention of a term on a page, expand acronyms that are likely to be unfamiliar to users. When in doubt, expand it—or better yet, link it to the article or <a href="/en-US/docs/Glossary">glossary</a> entry describing the technology.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: "XUL (XML User Interface Language) is Mozilla's XML-based language..."</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: "XUL is Mozilla's XML-based language..."</li>
+ <li><strong>Correct</strong>: "XUL (XML User Interface Language) is Mozilla's XML-based language..."</li>
+ <li><strong>Incorrect</strong>: "XUL is Mozilla's XML-based language..."</li>
 </ul>
 
 <h4 id="Plurals_of_acronyms_and_abbreviations">Plurals of acronyms and abbreviations</h4>
@@ -370,8 +372,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>Don't use an apostrophe. Ever. Please.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: CD-ROMs</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: CD-ROM's</li>
+ <li><strong>Correct</strong>: CD-ROMs</li>
+ <li><strong>Incorrect</strong>: CD-ROM's</li>
 </ul>
 
 <h4 id="Versus_vs._and_v.">"Versus", "vs.", and "v."</h4>
@@ -379,16 +381,16 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>The contraction "vs." is preferred.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: this vs. that</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: this v. that</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: this versus that</li>
+ <li><strong>Correct</strong>: this vs. that</li>
+ <li><strong>Incorrect</strong>: this v. that</li>
+ <li><strong>Incorrect</strong>: this versus that</li>
 </ul>
 
 <h3 id="Capitalization">Capitalization</h3>
 
 <p>Use standard English capitalization rules in body text, and capitalize "World Wide Web." It is acceptable to use lower case for "web" (used alone or as a modifier) and "internet".</p>
 
-<div class="notecard note">
+<div class="note">
 <p><strong>Note</strong>: This guideline is a change from a previous version of this guide, so you may find many instances of "Web" and "Internet" on MDN.</p>
 
 <p>Feel free to change these as you are making other changes, but editing an article just to change capitalization is not necessary.</p>
@@ -413,8 +415,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>Use English-style plurals, not the Latin- or Greek-influenced forms.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: syllabuses, octopuses</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: syllabi, octopi</li>
+ <li><strong>Correct</strong>: syllabuses, octopuses</li>
+ <li><strong>Incorrect</strong>: syllabi, octopi</li>
 </ul>
 
 <h3 id="Hyphenation">Hyphenation</h3>
@@ -422,8 +424,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>Hyphenated compounds should be used when the last letter of the prefix is a vowel and is the same as the first letter of the root.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: email, re-elect, co-op</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: e-mail, reelect, coop</li>
+ <li><strong>Correct</strong>: email, re-elect, co-op</li>
+ <li><strong>Incorrect</strong>: e-mail, reelect, coop</li>
 </ul>
 
 
@@ -454,7 +456,7 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 
 <p><em>A confirmation dialog appears, asking the user if they allow the Web page to make use of their Web cam.</em></p>
 
-<div class="note notecard">
+<div class="note">
 <p><strong>Note</strong>: MDN allows the use of this very common syntax (which is controversial among usage authorities) to make up for the lack of a neutral gender in English.</p>
 
 <p>The use of the third-person plural as a gender neutral pronoun (that is, using "they," "them", "their," and "theirs") is an accepted practice, commonly known as "<a href="https://en.wikipedia.org/wiki/Singular_they">singular 'they.'</a>"</p>
@@ -480,15 +482,15 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>For dates (not including dates in code samples) use the format "January 1, 1990".</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: February 24, 2006</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: February 24th, 2006; 24 February, 2006; 24/02/2006</li>
+ <li><strong>Correct</strong>: February 24, 2006</li>
+ <li><strong>Incorrect</strong>: February 24th, 2006; 24 February, 2006; 24/02/2006</li>
 </ul>
 
 <p>Alternately, you can use the YYYY/MM/DD format.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: 2006/02/24</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: 02/24/2006; 24/02/2006; 02/24/06</li>
+ <li><strong>Correct</strong>: 2006/02/24</li>
+ <li><strong>Incorrect</strong>: 02/24/2006; 24/02/2006; 02/24/06</li>
 </ul>
 
 <h4 id="Decades">Decades</h4>
@@ -496,8 +498,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>For decades, use the format "1990s". Don't use an apostrophe.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: 1990s</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: 1990's</li>
+ <li><strong>Correct</strong>: 1990s</li>
+ <li><strong>Incorrect</strong>: 1990's</li>
 </ul>
 
 <h4 id="Plurals_of_numerals">Plurals of numerals</h4>
@@ -505,8 +507,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>For plurals of numerals add "s". Don't use an apostrophe.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: 486s</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: 486's</li>
+ <li><strong>Correct</strong>: 486s</li>
+ <li><strong>Incorrect</strong>: 486's</li>
 </ul>
 
 <h4 id="Commas">Commas</h4>
@@ -514,8 +516,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>In running text, use commas only in five-digit and larger numbers.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: 4000; 54,000</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: 4,000; 54000</li>
+ <li><strong>Correct</strong>: 4000; 54,000</li>
+ <li><strong>Incorrect</strong>: 4,000; 54000</li>
 </ul>
 
 <h3 id="Punctuation">Punctuation</h3>
@@ -525,8 +527,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p><strong>Use the serial comma</strong>. The serial (also known as "Oxford") comma is the comma that appears before the conjunction in a series of three or more items.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: I will travel on trains, planes, and automobiles.</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: I will travel on trains, planes and automobiles.</li>
+ <li><strong>Correct</strong>: I will travel on trains, planes, and automobiles.</li>
+ <li><strong>Incorrect</strong>: I will travel on trains, planes and automobiles.</li>
 </ul>
 
 <h4 id="Apostrophes_and_quotation_marks">Apostrophes and quotation marks</h4>
@@ -541,8 +543,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 </ol>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: Please don't use "curly quotes."</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: Please don’t use “curly quotes.”</li>
+ <li><strong>Correct</strong>: Please don't use "curly quotes."</li>
+ <li><strong>Incorrect</strong>: Please don’t use “curly quotes.”</li>
 </ul>
 
 <h3 id="Spelling">Spelling</h3>
@@ -552,8 +554,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>In general, use the first entry at <a href="https://www.dictionary.com/">Dictionary.com</a>, unless that entry is listed as a variant spelling or as being primarily used in a non-American form of English. For example, if you <a href="https://www.dictionary.com/browse/behavior">look up "behavior"</a>, you find the phrase "Chiefly British" followed by a link to the American standard form, "<a href="https://dictionary.reference.com/browse/behavior">behavior</a>". Do not use variant spellings.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: localize, behavior</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: localise, behaviour</li>
+ <li><strong>Correct</strong>: localize, behavior</li>
+ <li><strong>Incorrect</strong>: localise, behaviour</li>
 </ul>
 
 <h3 id="Terminology">Terminology</h3>
@@ -565,8 +567,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>When you reference a given element for the first time in a section, you should use the {{TemplateLink("HTMLElement")}} macro to create a link to the documentation for the element (unless you're writing within that element's reference document page).</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: the {{HTMLElement("span")}} element</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: the span tag</li>
+ <li><strong>Correct</strong>: the {{HTMLElement("span")}} element</li>
+ <li><strong>Incorrect</strong>: the span tag</li>
 </ul>
 
 <h4 id="Parameters_vs._arguments">Parameters vs. arguments</h4>
@@ -578,8 +580,8 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p>In task sequences, describe user interface actions using the imperative mood. Identify the user interface element by its label and type.</p>
 
 <ul>
- <li><span class="correct"><strong>Correct</strong></span>: Click the Edit button.</li>
- <li><span class="incorrect"><strong>Incorrect</strong></span>: Click Edit.</li>
+ <li><strong>Correct</strong>: Click the Edit button.</li>
+ <li><strong>Incorrect</strong>: Click Edit.</li>
 </ul>
 
 <h3 id="Voice">Voice</h3>
