--- a/files/en-us/mdn/structures/compatibility_tables/index.html
+++ b/files/en-us/mdn/structures/compatibility_tables/index.html
@@ -387,7 +387,7 @@ browser-compat: api.AbortController
   }
 ],</pre>
 
-<div class="notecard note">
+<div class="note">
 <p><strong>Note:</strong> You should put the most current or important support point first in the array — this makes the data easier to read for people who just want to scan it for the latest info.</p>
 </div>
 
@@ -397,7 +397,7 @@ browser-compat: api.AbortController
 
 <p>To include such a case in the browser compat data, you can include a support information point that specifies the alternative name inside an "alternative_name" member.</p>
 
-<div class="notecard note">
+<div class="note">
 <p><strong>Note:</strong> The alternative name might not be an exact alias — it might have differing behavior to the standard version.</p>
 </div>
 
