--- a/files/en-us/mdn/structures/macros/commonly-used_macros/index.html
+++ b/files/en-us/mdn/structures/macros/commonly-used_macros/index.html
@@ -119,9 +119,8 @@ tags:
         <td><a href="https://github.com/mdn/yari/blob/main/kumascript/macros/event.ejs">Event</a>.</td>
         <td><a href="/en-US/docs/Web/Events">Events reference</a> (/Web/Events)</td>
         <td>
-        <div class="notecard note">
-            <h4>Note</h4>
-            <p>This macro is not particularly useful because events are now under their associated DOM element. So to link to the wheel event you would use <code>\{{DOMxRef("Document.wheel_event")}}</code>: {{DOMxRef("Document.wheel_event")}}</p>
+        <div class="note">
+            <p><strong>Note:</strong> This macro is not particularly useful because events are now under their associated DOM element. So to link to the wheel event you would use <code>\{{DOMxRef("Document.wheel_event")}}</code>: {{DOMxRef("Document.wheel_event")}}</p>
         </div>
         </td>
       </tr>
