--- a/files/en-us/mdn/tools/kumascript/index.html
+++ b/files/en-us/mdn/tools/kumascript/index.html
@@ -353,7 +353,7 @@ The result of 2 + 2 = &lt;%= math_lib.add(2, 2) %&gt;</pre>
 <pre class="brush: js no-line-numbers">&lt;%- mdn.getFileContent(env.files[0]); %&gt;
 </pre>
 
-<div class="notecard note">
+<div class="note">
 <p><strong>Note:</strong> You probably don't want to try to embed the contents of a non-text file this way, as the raw contents would be injected as text. This is meant to let you access the contents of text attachments.</p>
 </div>
 
