[Markdown] [Web/HTML] Remove ID attributes from HTML docs: everything except input (#9128)
* Remove ID attributes from HTML docs: everything except input

* Remove heading ID entirely; use the generated one

--- a/files/en-us/web/html/attributes/index.html
+++ b/files/en-us/web/html/attributes/index.html
@@ -17,9 +17,9 @@ tags:
 
 <p>Elements in HTML have <strong>attributes</strong>; these are additional values that configure the elements or adjust their behavior in various ways to meet the criteria the users want.</p>
 
-<h2 id="global_event_handlers">Global event handlers</h2>
+<h2>Global event handlers</h2>
 
-<p>In addition to the attributes listed in the table below, the <a href="/en-US/docs/Web/API/GlobalEventHandlers"><code>GlobalEventHandlers</code></a> article lists global event handlers — such as <a href="/en-US/docs/Web/API/GlobalEventHandlers/onclick"><code>onclick</code></a> — than can also be specified as <a href="#content_versus_idl_attributes">content attributes</a> on all elements.</a></p>
+<p>In addition to the attributes listed in the table below, the <a href="/en-US/docs/Web/API/GlobalEventHandlers"><code>GlobalEventHandlers</code></a> article lists global event handlers — such as <a href="/en-US/docs/Web/API/GlobalEventHandlers/onclick"><code>onclick</code></a> — than can also be specified as <a href="#content_versus_idl_attributes">content attributes</a> on all elements.</p>
 
 <h2 id="Attribute_list">Attribute list</h2>
 
@@ -83,7 +83,7 @@ tags:
    <td>Indicates whether controls in this form can by default have their values automatically completed by the browser.</td>
   </tr>
   <tr>
-   <td id="attr-autofocus"><code><a href="/en-US/docs/Web/HTML/Attributes/autofocus">autofocus</a></code></td>
+   <td><code><a href="/en-US/docs/Web/HTML/Attributes/autofocus">autofocus</a></code></td>
    <td>{{ HTMLElement("button") }}, {{ HTMLElement("input") }}, {{ HTMLElement("keygen") }}, {{ HTMLElement("select") }}, {{ HTMLElement("textarea") }}</td>
    <td>The element should be automatically focused after the page loaded.</td>
   </tr>
@@ -293,7 +293,7 @@ tags:
    <td>Describes elements which belongs to this one.</td>
   </tr>
   <tr>
-   <td id="attr-form"><code><a href="/en-US/docs/Web/HTML/Attributes/form">form</a></code></td>
+   <td><code><a href="/en-US/docs/Web/HTML/Attributes/form">form</a></code></td>
    <td>{{ HTMLElement("button") }}, {{ HTMLElement("fieldset") }}, {{ HTMLElement("input") }}, {{ HTMLElement("keygen") }}, {{ HTMLElement("label") }}, {{ HTMLElement("meter") }}, {{ HTMLElement("object") }}, {{ HTMLElement("output") }}, {{ HTMLElement("progress") }}, {{ HTMLElement("select") }}, {{ HTMLElement("textarea") }}</td>
    <td>Indicates the form that is the owner of the element.</td>
   </tr>
@@ -692,7 +692,7 @@ tags:
   <tr>
    <td><code><a href="/en-US/docs/Web/HTML/Global_attributes/translate">translate</a></code></td>
    <td><a href="/en-US/docs/Web/HTML/Global_attributes">Global attribute</a></td>
-   <td>Specify whether an element’s attribute values and the values of its <code><a href="https://dom.spec.whatwg.org/#text" id="ref-for-text①⑦">Text</a></code> node children are to be translated when the page is localized, or whether to leave them unchanged.</td>
+   <td>Specify whether an element’s attribute values and the values of its <code><a href="https://dom.spec.whatwg.org/#text">Text</a></code> node children are to be translated when the page is localized, or whether to leave them unchanged.</td>
   </tr>
   <tr>
    <td><code><a href="/en-US/docs/Web/HTML/Attributes/type">type</a></code></td>
