--- a/files/en-us/web/html/block-level_elements/index.html
+++ b/files/en-us/web/html/block-level_elements/index.html
@@ -21,7 +21,7 @@ tags:
 
 <p>The following example demonstrates the block-level element's influence:</p>
 
-<h2 id="Block-level_Example">Block-level elements</h2>
+<h2>Block-level elements</h2>
 
 <h3 id="HTML">HTML</h3>
 
@@ -32,7 +32,7 @@ tags:
 <pre class="brush: css">p { background-color: #8ABB55; }
 </pre>
 
-<p>{{ EmbedLiveSample('Block-level_Example') }}</p>
+<p>{{ EmbedLiveSample('Block-level_elements') }}</p>
 
 <h2 id="Usage">Usage</h2>
 
